--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <p>
 
-    Meu nome é Avelino Fernandes, tenho 21 anos de idade, sou angolano nascido na cidade de Luanda no dia 24 de Abril de 2001. Sou estudante do 1º ano no curso de comunicação Audiovisual e Multimédia, de momento ainda não tenho perspetivas amplas para com esse curso, uma vez que é algo totalmente novo para mim e também foge muito daquilo que era o meu curso em Angola, Engenharia Informática, mas contudo espero viver experiencias positivas dentro deste ramo.
+    Meu nome é Avelino Fernandes, tenho 21 anos de idade, sou angolano nascido na cidade de Luanda no dia 24 de Abril de 2001. Sou estudante do 1º ano no curso de comunicação Audiovisual e Multimédia, de momento ainda não tenho perspetivas amplas para com esse curso, uma vez que é algo totalmente novo para mim e também foge muito daquilo que era o meu curso em Angola, mas contudo espero viver experiencias positivas dentro deste curso.
 
 
 
